--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,6 +16,11 @@ jobs:
           python train.py
 
           # Write your CML report
-          echo "Model Results"
-          cat metrics.txt
+          echo "## Model Metrics" > report.md
+          cat metrics.txt >> report.md
+
+          echo '## Viz' >> report.md
+          cml-publish feature_importance.png --md >> report.md
+          cml-publish residuals.png --md >> report.md
           
+          cml-send-comment report.md
